--- a/src/components/About/_About.scss
+++ b/src/components/About/_About.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     margin-top: 10px;
     margin-bottom: 30px;
     img {
