--- a/src/components/SectionHeader/_SectionHeader.scss
+++ b/src/components/SectionHeader/_SectionHeader.scss
@@ -1,7 +1,7 @@
 .SectionHeader {
   background-color: green;
   background-image: url("/images/assets/bgImage-02.jpg");
-  background-size: 1200px 147px;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
