--- a/src/components/Skills/_Skills.scss
+++ b/src/components/Skills/_Skills.scss
@@ -1,5 +1,5 @@
 .Skills {
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
